--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <div>
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1>
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1>
-        </div>
-        <div>
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1>
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1><h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, unde fuga quia culpa suscipit ad animi nobis laborum impedit labore, atque odit saepe ab ullam placeat quidem porro velit. Ad!</h1>
-        </div>
-    </body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>çaythi</title>
+
+</head>
+
+<body>
+    <div class="container">
+        <section class="esquerda">
+            <!--a partir do "com um Front-end de qualidade! as letras ficam em "azul" -->
+            <h1 class="titulo">Eleve seu negócio digital a outro nivelcom um Front-end de qualidade!</h1>
+            <p>Olá! sou joana santos, desenvolvedora Front-End com especialidade em React, HTML e CSS. Ajudo pequenos
+                negocios e designers a colocarem em pratica boas ideias. Vamos Conversar ?</p>
+            <p>acesse minhas redes </p>
+            <p>intagram</p>
+            <p>GitHub</p>
+        </section>
+
+        <section class="direita">
+            <img src="https://raw.githubusercontent.com/emmanuelmeireles/aulaHtmlCss/main/cssFontsLinks/Imagem.png" alt="">
+        </section>
+    </div>
+</body>
+
 </html>
